✨ feat: Add internationalization to Work title component

--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -28,7 +28,7 @@ const i18n = getI18N({ currentLocale });
 	<Header {...i18n} />
 	<main>
 		<Presentation {...i18n} />
-		<Work />
+		<Work {...i18n} />
 		<AboutMe {...i18n} />
 	</main>
 	<Footer {...i18n} />
