--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ export interface Props {
 const { title } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -38,6 +38,7 @@ const { title } = Astro.props;
 			property="og:site_name"
 			content="Carlos Jorge's personal portfolio website"
 		/>
+		<!-- TODO:use svg instead -->
 		<meta
 			property="og:image"
 			content="https://carlosjorger.github.io/images/purple-logo.png"
