✨ feat: change ul design of localeSelector

--- a/src/components/Header/LocaleSelector.astro
+++ b/src/components/Header/LocaleSelector.astro
@@ -44,7 +44,7 @@ const CURRENT_LANGUAGE = currentLocale === 'es' ? SPANISH : ENGLISH;
 
 <div id="dropdown" class="z-10 hidden w-24 divide-y rounded-lg shadow">
 	<ul
-		class="rounded-md bg-[--default-background-color] py-2 text-sm shadow-lg"
+		class="rounded-md bg-[#453662] py-2 text-sm drop-shadow-[0rem_0rem_0.3rem_aqua]"
 		aria-labelledby="dropdownDefaultButton"
 	>
 		<li>
