📃 docs: update TODO

--- a/src/components/Header/LocaleSelector.astro
+++ b/src/components/Header/LocaleSelector.astro
@@ -6,7 +6,7 @@ export interface Props {
 }
 const { SPANISH, ENGLISH } = Astro.props;
 const CURRENT_LANGUAGE = currentLocale === 'es' ? SPANISH : ENGLISH;
-// TODO: improve design using a Select with dropdown https://flowbite.com/docs/components/dropdowns/
+// TODO: fix LocalteSelector in mobile view
 ---
 
 <script>
