--- a/src/components/Header/LocaleSelector.astro
+++ b/src/components/Header/LocaleSelector.astro
@@ -3,10 +3,11 @@ const { currentLocale } = Astro;
 export interface Props {
 	SPANISH: string;
 	ENGLISH: string;
+	id: string;
+	dropdown_id: string;
 }
-const { SPANISH, ENGLISH } = Astro.props;
+const { SPANISH, ENGLISH, id, dropdown_id } = Astro.props;
 const CURRENT_LANGUAGE = currentLocale === 'es' ? SPANISH : ENGLISH;
-// TODO: fix LocalteSelector in mobile view
 ---
 
 <script>
@@ -21,8 +22,8 @@ const CURRENT_LANGUAGE = currentLocale === 'es' ? SPANISH : ENGLISH;
 </script>
 
 <button
-	id="dropdownDefaultButton"
-	data-dropdown-toggle="dropdown"
+	id={id}
+	data-dropdown-toggle={dropdown_id}
 	class="inline-flex h-auto items-center rounded-md bg-transparent px-2.5 text-center font-lato text-[var(--default-font-color2)] transition-all duration-200 ease-in-out hover:text-teal-300 focus:outline-none focus:ring-4 focus:ring-[--default-secundary-font-color-2] focus:drop-shadow-[0rem_0rem_0.3rem_aqua]"
 	type="button"
 	>{CURRENT_LANGUAGE}
@@ -42,10 +43,10 @@ const CURRENT_LANGUAGE = currentLocale === 'es' ? SPANISH : ENGLISH;
 	</svg>
 </button>
 
-<div id="dropdown" class="z-10 hidden w-24 divide-y rounded-lg shadow">
+<div id={dropdown_id} class="z-10 hidden w-24 divide-y rounded-lg shadow">
 	<ul
 		class="rounded-md bg-[#453662] py-2 text-sm drop-shadow-[0rem_0rem_0.3rem_aqua]"
-		aria-labelledby="dropdownDefaultButton"
+		aria-labelledby={id}
 	>
 		<li>
 			<a
