🎈 perf: use favicon in a svg format instead

--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -23,7 +23,7 @@ const i18n = getI18N({ currentLocale });
 		}
 	});
 </script>
-<!-- TODO: Add skills -->
+<!-- TODO: Add skills --><!-- TODO: Add Experience -->
 <Layout title="Carlos Jorge's personal portfolio website">
 	<Header {...i18n} />
 	<main>
