--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -24,6 +24,7 @@ type Project = {
 	imageSrc: string;
 	website?: string;
 };
+// TODO: añadir mas coherencia en las imagenes de los proyectos
 const { PROJECTS_TITLE, PROJECTS_TITLE_AFTER_BR, PROYECTS } = Astro.props;
 
 const projects = [
