--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -6,6 +6,9 @@ import Footer from './Footer/Footer.astro';
 import Work from './Work/Work.astro';
 import Presentation from './Presentation.astro';
 import { getI18N } from '../i18n/';
+export interface Props {
+	public_src: string;
+}
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 ---
@@ -25,7 +28,7 @@ const i18n = getI18N({ currentLocale });
 </script>
 <!-- TODO: Add skills --><!-- TODO: Add Experience -->
 <Layout title="Carlos Jorge's personal portfolio website">
-	<Header {...i18n} />
+	<Header {...i18n} {...Astro.props} />
 	<main>
 		<Presentation {...i18n} />
 		<Work {...i18n} />
