🦄 refactor: create Path aliases in tsconfig

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,6 +1,6 @@
 ---
-import Subtitle from './shared/Subtitle.astro';
-import CustomParagraph from './shared/CustomParagraph.astro';
+import Subtitle from '@shared/Subtitle.astro';
+import CustomParagraph from '@shared/CustomParagraph.astro';
 export interface Props {
 	ABOUT_ME_TITLE: string;
 	ABOUT_ME_DESCRIPTION: string;
