--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -1,12 +1,12 @@
 ---
-import Subtitle from '../shared/Subtitle.astro';
-import CustomLink from '../shared/CustomLink.astro';
-import CustomParagraph from '../shared/CustomParagraph.astro';
-import IconContact from '../icons/IconContact.astro';
-import IconMail from '../icons/IconMail.astro';
-import IconGithub from '../icons/IconGithub.astro';
-import IconLinkedin from '../icons/IconLinkedin.astro';
-import IconTwitter from '../icons/IconTwitter.astro';
+import Subtitle from '@shared/Subtitle.astro';
+import CustomLink from '@shared/CustomLink.astro';
+import CustomParagraph from '@shared/CustomParagraph.astro';
+import IconContact from '@icons/IconContact.astro';
+import IconMail from '@icons/IconMail.astro';
+import IconGithub from '@icons/IconGithub.astro';
+import IconLinkedin from '@icons/IconLinkedin.astro';
+import IconTwitter from '@icons/IconTwitter.astro';
 export interface Props {
 	CONTACT_TITLE: string;
 	CONTACT_DESCRIPTION: string;
