--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -2,11 +2,11 @@
 import Link from './Link.astro';
 import SideBarLink from './SideBarLink.astro';
 import HamburgerMenuIcon from './HamburgerMenuIcon.astro';
-import IconHome from '../icons/IconHome.astro';
-import IconContainer from '../icons/IconContainer.astro';
-import IconAddress from '../icons/IconAddress.astro';
-import IconUser from '../icons/IconUser.astro';
-import IconCode from '../icons/IconCode.astro';
+import IconHome from '@icons/IconHome.astro';
+import IconContainer from '@icons/IconContainer.astro';
+import IconAddress from '@icons/IconAddress.astro';
+import IconUser from '@icons/IconUser.astro';
+import IconCode from '@icons/IconCode.astro';
 import LocaleSelector from './LocaleSelector.astro';
 export interface Props {
 	ABOUT_ME_TITLE: string;
