--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -1,5 +1,5 @@
 ---
-import CustomParagraph from './shared/CustomParagraph.astro';
+import CustomParagraph from '@shared/CustomParagraph.astro';
 export interface Props {
 	INTRO_TITLE: string;
 	INTRO_TITLE_AFTER_BR1: string;
