--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -1,5 +1,5 @@
 ---
-import CustomParagraph from '../shared/CustomParagraph.astro';
+import CustomParagraph from '@shared/CustomParagraph.astro';
 import IconLink from '../icons/IconLink.astro';
 import IconGithub from '../icons/IconGithubLink.astro';
 import IconLinkContainer from '../icons/IconLinkContainer.astro';
