--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -1,6 +1,6 @@
 ---
 import Project from './Project.astro';
-import Subtitle from '../shared/Subtitle.astro';
+import Subtitle from '@shared/Subtitle.astro';
 import IconAstro from '../icons/IconAstro.astro';
 import IconTailwind from '../icons/IconTailwind.astro';
 import IconVue from '../icons/IconVue.astro';
