🦄 refactor: create an alias to utils

--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -14,7 +14,7 @@ const i18n = getI18N({ currentLocale });
 ---
 
 <script>
-	import { touchOutsideColumnNavbar, touchIcon } from '../utils/touchEvents';
+	import { touchOutsideColumnNavbar, touchIcon } from '@utils/touchEvents';
 	document.addEventListener('touchstart', touchOutsideColumnNavbar, {
 		passive: true,
 	});
