--- a/src/components/Header/HamburgerMenuIcon.astro
+++ b/src/components/Header/HamburgerMenuIcon.astro
@@ -1,5 +1,5 @@
 <script>
-	import { toggleHamburgerMenuIcon } from '../../utils/touchEvents';
+	import { toggleHamburgerMenuIcon } from '@utils/touchEvents';
 
 	document.addEventListener('DOMContentLoaded', function () {
 		const navBarIcon = document.getElementById('hamburger-menu-icon');
