--- a/src/components/Header/Link.astro
+++ b/src/components/Header/Link.astro
@@ -10,7 +10,7 @@ const sectionId = sectionIdWhitoutHome ? sectionIdWhitoutHome : 'home';
 ---
 
 <script>
-	import { activeLinkBySection } from '../../utils/scrollEvents';
+	import { activeLinkBySection } from '@utils/scrollEvents';
 	class CustomLink extends HTMLElement {
 		constructor() {
 			super();
