✨ feat: remove icons folder

--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -1,8 +1,8 @@
 ---
 import CustomParagraph from '@shared/CustomParagraph.astro';
-import IconLink from '../icons/IconLink.astro';
-import IconGithub from '../icons/IconGithubLink.astro';
-import IconLinkContainer from '../icons/IconLinkContainer.astro';
+import IconLink from '@icons/IconLink.astro';
+import IconGithub from '@icons/IconGithubLink.astro';
+import IconLinkContainer from '@icons/IconLinkContainer.astro';
 import type { TAG } from './Work.astro';
 
 export interface Props {
