--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -1,11 +1,11 @@
 ---
 import Project from './Project.astro';
 import Subtitle from '@shared/Subtitle.astro';
-import IconAstro from '../icons/IconAstro.astro';
-import IconTailwind from '../icons/IconTailwind.astro';
-import IconVue from '../icons/IconVue.astro';
-import IconAngular from '../icons/IconAngular.astro';
-import IconRust from '../icons/IconRust.astro';
+import IconAstro from '@icons/IconAstro.astro';
+import IconTailwind from '@icons/IconTailwind.astro';
+import IconVue from '@icons/IconVue.astro';
+import IconAngular from '@icons/IconAngular.astro';
+import IconRust from '@icons/IconRust.astro';
 export interface Props {
 	PROJECTS_TITLE: string;
 	PROJECTS_TITLE_AFTER_BR: string;
