--- a/src/components/icons/IconLinkContainer.astro
+++ b/src/components/icons/IconLinkContainer.astro
@@ -1,5 +1,5 @@
 ---
-import IconContainer from '../icons/IconContainer.astro';
+import IconContainer from '@icons/IconContainer.astro';
 
 export interface Props {
 	id?: string;
