✨ feat: Add internationalization to layout component

--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -27,7 +27,7 @@ const i18n = getI18N({ currentLocale });
 	});
 </script>
 <!-- TODO: Add skills --><!-- TODO: Add Experience -->
-<Layout title="Carlos Jorge's personal portfolio website">
+<Layout {...i18n}>
 	<Header {...i18n} {...Astro.props} />
 	<main>
 		<Presentation {...i18n} />
