✨ feat: change LocaleSelector

--- a/src/components/Header/LocaleSelector.astro
+++ b/src/components/Header/LocaleSelector.astro
@@ -49,7 +49,7 @@ const CURRENT_LANGUAGE = currentLocale === 'es' ? SPANISH : ENGLISH;
 	class="z-10 hidden w-24 divide-y rounded-lg shadow max-sm:w-28"
 >
 	<ul
-		class="rounded-md bg-[#453662] py-2 text-sm drop-shadow-[0rem_0rem_0.3rem_aqua] max-sm:text-xl"
+		class="rounded-md bg-[hsl(271.2,35.21%,15%,80%)] text-sm drop-shadow-[0rem_0rem_0.3rem_black] max-sm:text-xl"
 		aria-labelledby={id}
 	>
 		<LocaleSelectorLink lang={SPANISH} href="/es" />
