--- a/src/components/Header/LocaleSelectorLink.astro
+++ b/src/components/Header/LocaleSelectorLink.astro
@@ -9,7 +9,7 @@ const { lang, href } = Astro.props;
 <li>
 	<a
 		href={href}
-		class="block px-3 py-2 transition-all duration-200 ease-in-out hover:text-teal-300 hover:drop-shadow-[0rem_0rem_0.3rem_aqua]"
+		class="block rounded-md bg-black/0 px-3 py-2 transition-all duration-200 ease-in-out hover:bg-black/5 hover:text-teal-300 hover:drop-shadow-[0rem_0rem_0.3rem_aqua]"
 		>{lang}</a
 	>
 </li>
