✨ feat: create Experience section

--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -6,6 +6,7 @@ import Footer from './Footer/Footer.astro';
 import Work from './Work/Work.astro';
 import Presentation from './Presentation.astro';
 import { getI18N } from '../i18n/';
+import Experience from './Experience.astro';
 export interface Props {
 	public_src: string;
 }
@@ -32,6 +33,7 @@ const i18n = getI18N({ currentLocale });
 	<main>
 		<Presentation {...i18n} />
 		<Work {...i18n} />
+		<Experience />
 		<AboutMe {...i18n} />
 	</main>
 	<Footer {...i18n} />
