--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -28,8 +28,9 @@ const jobs = [
 	<header class="reveal pb-2">
 		<Subtitle left>Experience</Subtitle>
 	</header>
+	<!-- TODO:align experience bar with home icon responsive -->
 	<ol
-		class="reveal-experience relative mx-5 border-s border-[var(--default-secundary-font-color-2)]"
+		class="reveal-experience relative mx-[1.33rem] border-s border-[var(--default-secundary-font-color-2)]"
 	>
 		{
 			jobs.map((job) => (
